Attempted some of the extra credit, had to comment some of it out

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,11 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# ignore the contents of the ".env" file (prevent them from being exposed on GitHub):
+*.env
+
+
+# ignore the google api credentials file at the following location:
+auth/google-credentials.json
+
