--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 python-dotenv
 
-sendgrid==6.6.0
+#sendgrid==6.6.0
 
-gspread==3.6.0
+#gspread==3.6.0
 
-oauth2client==4.1.3
+#oauth2client==4.1.3
 
