Added csv integration

--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,7 @@ dmypy.json
 # ignore the google api credentials file at the following location:
 auth/google-credentials.json
 
+# this is the ".gitignore" file...# ...
+# ignore the products CSV file inventory (but not the default):
+data/products.csv
+!data/default_products.csv
